--- a/PI/Tela Inicial/Pages/cadastro.html
+++ b/PI/Tela Inicial/Pages/cadastro.html
@@ -26,25 +26,25 @@
                 <div class="container-cadastro">
                     <div class="form-cadastro">
                         <div class="text-cadastro">Cadastro</div>
-                        <form action="">
+                        <form action="cadastro.php" method="POST">
                             <div class="form__group field">
-                                <input type="text" class="form__field" placeholder="Nome completo" required="">
+                                <input type="text" name="nome" id="nome" class="form__field" placeholder="Nome completo" required="">
                                 <label for="nome" class="form__label">Nome Completo*</label>
                             </div>
                             <div class="form__group field">
-                                <input type="email" class="form__field" placeholder="E-mail" required="">
+                                <input type="email" name="email" id="email" class="form__field" placeholder="E-mail" required="">
                                 <label for="email" class="form__label">E-mail*</label>
                             </div>
                             <div class="form__group field">
-                                <input type="number" class="form__field" placeholder="CPF" required="">
+                                <input type="number" name="cpf" id="cpf" class="form__field" placeholder="CPF" required="">
                                 <label for="cpf" class="form__label">CPF*</label>
                             </div>
                             <div class="form__group field">
-                                <input type="number" class="form__field" placeholder="CEP" required="">
+                                <input type="number" name="cep" id="cep" class="form__field" placeholder="CEP" required="">
                                 <label for="cep" class="form__label">CEP*</label>
                             </div>
                             <div class="form__group field">
-                                <input type="password" class="form__field" placeholder="Senha" required="">
+                                <input type="password" name="senha" id="senha" class="form__field" placeholder="Senha" required="">
                                 <label for="senha" class="form__label">Senha*</label>
                             </div>
                             <div class="btn-cadastro">
