--- a/PI/Tela Inicial/Pages/login.html
+++ b/PI/Tela Inicial/Pages/login.html
@@ -29,13 +29,13 @@
                 <div class="container-login">
                     <div class="form-container">
                         <div class="text-login">Login</div>
-                        <form action="">
+                        <form action="login.php" method="POST">
                             <div class="form__group field">
-                                <input type="email" class="form__field" placeholder="E-mail" required="">
+                                <input type="email" name="email" id="email" class="form__field" placeholder="E-mail" required="">
                                 <label for="email" class="form__label">E-mail*</label>
                             </div>
                             <div class="form__group field">
-                                <input type="password" class="form__field" placeholder="Senha" required="">
+                                <input type="password" name="senha" id="senha" class="form__field" placeholder="Senha" required="">
                                 <label for="senha" class="form__label">Senha*</label>
                             </div>
                             <div class="form__group field">
