--- a/PI/Tela Inicial/Pages/cadastro.html
+++ b/PI/Tela Inicial/Pages/cadastro.html
@@ -5,16 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro</title>
     <link rel="stylesheet" href="../Css/syte.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body class="body-cad">
-
-    <main class="main">
+    <main class="main-cad">
         <header class="menu">
             <nav class="container-menu">
                     <div class="img-menu">
                         <a href="../Pages/Home.html">
-                            <img src="../src/imagens/Apola__1_-removebg-preview.png" alt=""class="img-logo" >
+                            <img src="../Src/imagens/Apola__1_-removebg-preview.png" alt=""class="img-logo" >
                         </a>
                     </div>
             </nav>
@@ -26,25 +24,25 @@
                 <div class="container-cadastro">
                     <div class="form-cadastro">
                         <div class="text-cadastro">Cadastro</div>
-                        <form action="cadastro.php" method="POST">
+                        <form action="">
                             <div class="form__group field">
-                                <input type="text" name="nome" id="nome" class="form__field" placeholder="Nome completo" required="">
+                                <input type="text" class="form__field" placeholder="Nome completo" required="">
                                 <label for="nome" class="form__label">Nome Completo*</label>
                             </div>
                             <div class="form__group field">
-                                <input type="email" name="email" id="email" class="form__field" placeholder="E-mail" required="">
+                                <input type="email" class="form__field" placeholder="E-mail" required="">
                                 <label for="email" class="form__label">E-mail*</label>
                             </div>
                             <div class="form__group field">
-                                <input type="number" name="cpf" id="cpf" class="form__field" placeholder="CPF" required="">
+                                <input type="number" class="form__field" placeholder="CPF" required="">
                                 <label for="cpf" class="form__label">CPF*</label>
                             </div>
                             <div class="form__group field">
-                                <input type="number" name="cep" id="cep" class="form__field" placeholder="CEP" required="">
+                                <input type="number" class="form__field" placeholder="CEP" required="">
                                 <label for="cep" class="form__label">CEP*</label>
                             </div>
                             <div class="form__group field">
-                                <input type="password" name="senha" id="senha" class="form__field" placeholder="Senha" required="">
+                                <input type="password" class="form__field" placeholder="Senha" required="">
                                 <label for="senha" class="form__label">Senha*</label>
                             </div>
                             <div class="btn-cadastro">
@@ -55,7 +53,7 @@
                     </div>
                 </div>
                 <div class="img-container-cadastro">
-                    <img src="../src/imagens/cadastro/mulher-plana-cuidando-de-plantas.png" alt="">
+                    <img src="../Src/imagens/cadastro/mulher-plana-cuidando-de-plantas.png" alt="">
                 </div>
             </div>
         </section>
