--- a/PI/Tela Inicial/Pages/login.html
+++ b/PI/Tela Inicial/Pages/login.html
@@ -8,34 +8,34 @@
     <title>Login</title>
 </head>
 <body class="body-log">
-    <main class="main">
+    <main class="main-login">
         <header class="menu">
             <nav class="container-menu">
                     <div class="img-menu">
                         <a href="../Pages/Home.html">
-                            <img src="../src/imagens/Apola__1_-removebg-preview.png" alt=""class="img-logo" >
+                            <img src="../Src/imagens/Apola__1_-removebg-preview.png" alt=""class="img-logo" >
                         </a>
                     </div>
             </nav>
         </header>    
         <section class="login">
             <div class="content-login">
-                <div class="shape"></div>
-                <div class="shape-2"></div>
+                <div class="shape-login"></div>
+                <div class="shape-login2"></div>
 
-                <div class="img-container">
-                    <img src="../src/imagens/login/Knitting-amico.png" alt="">
+                <div class="img-container-login">
+                    <img src="../Src/imagens/login/Knitting-amico.png" alt="">
                 </div>
                 <div class="container-login">
                     <div class="form-container">
                         <div class="text-login">Login</div>
-                        <form action="login.php" method="POST">
+                        <form action="">
                             <div class="form__group field">
-                                <input type="email" name="email" id="email" class="form__field" placeholder="E-mail" required="">
+                                <input type="email" class="form__field" placeholder="E-mail" required="">
                                 <label for="email" class="form__label">E-mail*</label>
                             </div>
                             <div class="form__group field">
-                                <input type="password" name="senha" id="senha" class="form__field" placeholder="Senha" required="">
+                                <input type="password" class="form__field" placeholder="Senha" required="">
                                 <label for="senha" class="form__label">Senha*</label>
                             </div>
                             <div class="form__group field">
