banner e validação login

--- a/PI/Tela Inicial/Pages/cadastro.html
+++ b/PI/Tela Inicial/Pages/cadastro.html
@@ -26,23 +26,23 @@
                         <div class="text-cadastro">Cadastro</div>
                         <form action="">
                             <div class="form__group field">
-                                <input type="text" class="form__field" placeholder="Nome completo" required="">
+                                <input type="text" class="form__field" placeholder="Nome completo" id="nome-cad" required>
                                 <label for="nome" class="form__label">Nome Completo*</label>
                             </div>
                             <div class="form__group field">
-                                <input type="email" class="form__field" placeholder="E-mail" required="">
+                                <input type="email" id="email-cad" class="form__field" placeholder="E-mail" required>
                                 <label for="email" class="form__label">E-mail*</label>
                             </div>
                             <div class="form__group field">
-                                <input type="number" class="form__field" placeholder="CPF" required="">
+                                <input type="number" id="cpf-cad" class="form__field" placeholder="CPF" required>
                                 <label for="cpf" class="form__label">CPF*</label>
                             </div>
                             <div class="form__group field">
-                                <input type="number" class="form__field" placeholder="CEP" required="">
+                                <input type="number" id="cep-cad" class="form__field" placeholder="CEP" required>
                                 <label for="cep" class="form__label">CEP*</label>
                             </div>
                             <div class="form__group field">
-                                <input type="password" class="form__field" placeholder="Senha" required="">
+                                <input type="password" id="senha-cad" class="form__field" placeholder="Senha" required>
                                 <label for="senha" class="form__label">Senha*</label>
                             </div>
                             <div class="btn-cadastro">
