--- a/PI/Tela Inicial/Pages/Home.html
+++ b/PI/Tela Inicial/Pages/Home.html
@@ -803,6 +803,39 @@
         <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
         <script src="../JS/swipper_card.js"></script>
         <!-- FIM 3* CARDS PRODUTOS -->
+
+          <!-- INICIO CARDS CATEGORIA SECUDARIO-->
+        <section class="cards_categoria_secundario">
+            <div class="content_cards_cat_2">
+                <a href="" class="item_card_cat_2">
+                    <img class="img_cat_2" src="../src/imagens/img_categorias_2/7 Tiny Crochet Animal Ideas List - Fabricerie.jfif" alt="">
+                    <h4 class="title_card_cat_2">Amigurumi</h2>
+                </a>
+                <a href="" class="item_card_cat_2">
+                    <img class="img_cat_2" src="../src/imagens/img_categorias_2/Organização de hall de entrada.jfif" alt="">
+                    <h4 class="title_card_cat_2">Porta-Chaves</h2>
+                </a>
+                <a href="" class="item_card_cat_2">
+                    <img class="img_cat_2" src="../src/imagens/img_categorias_2/Se adapta à decoração de qualquer ambiente_ seja sala, escritório, varanda, etc - cachepô cimento.jfif" alt="">
+                    <h4 class="title_card_cat_2">Cachepô</h2>
+                </a>
+            </div>
+
+        </section>
+        <!-- FIM CARDS CATEGORIA SECUDARIO-->
+        <section class="banner_promocional_final">
+            <div class="content_banner_promocional_final">
+                <div class="item_promocional_final">
+                    <div class="text_content_promo_final">
+                        <h5 class="text_call_banner_final">Dê vida ao seu ambiente com elegância!</h5>
+                        <div class="content_btn_banner_final"><a href="" class="btn__banner_final">Comprar</div></a>
+                    </div>
+                </div>
+                <div class="content_img_final">
+                    <img src="../src/imagens/img_banner_final/freepik-export-20241128142345vXdB.png" alt="">
+                </div>
+            </div>
+        </section>
            
 
 
