--- a/PI/Tela Inicial/Pages/Home.html
+++ b/PI/Tela Inicial/Pages/Home.html
@@ -797,6 +797,15 @@
         <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
         <script src="../JS/swipper_card.js"></script>
         <!-- FIM 3* CARDS PRODUTOS -->
+
+        <section class="card_cat_2">
+            <div class="content_card_cat_2">
+                <div class="item_card_cat_2">
+                    <div class="overlay_cat_2"></div>
+                    <span class="text_card_cat_2">Amigurumi</span>
+                </div>
+            </div>
+        </section>
         <section class="banner_promocional_final">
             <div class="content_banner_promocional_final">
                 <div class="item_promocional_final">
