--- a/PI/Tela Inicial/Pages/Home.html
+++ b/PI/Tela Inicial/Pages/Home.html
@@ -169,7 +169,7 @@
                                 <a id="icon-default" href="">Sobre Nós</a>
                             </li>
                             <li class="icon-default-back">
-                                <a id="icon-default" href="">Personalize</a>
+                                <a id="icon-default" href="../Pages/personalize.html">Personalize</a>
                             </li>
                             <li id="text-categoria">
                                 <a href="">Categorias<i class="fa-solid fa-chevron-down icon-seta"></i></a>
