--- a/PI/Tela Inicial/Pages/Home.html
+++ b/PI/Tela Inicial/Pages/Home.html
@@ -62,11 +62,11 @@
                     </div>
                     <div class="content-mobile-btn-login-cad">
                         <button class="btn-login-mobile">
-                            <a href="login.html">Login</a>
+                            <a href="login.php">Login</a>
 
                         </button>
                         <button class="btn-cadastro-mobile">
-                            <a href="cadastro.html">Cadastro</a>
+                            <a href="cadastro.php">Cadastro</a>
                         </button>
                     </div>
                     <div class="barra-pesquisa-mobile">
@@ -220,8 +220,8 @@
                                 <a id="icon-default" href=""><i class="fa-solid fa-user"></i></a>
                                 <ul class="drop-menu">
                                     <div class="shape-perfil"></div>
-                                    <li><a href="../Pages/login.html">Login</a></li>
-                                    <li><a href="../Pages/cadastro.html">Cadastro</a></li>
+                                    <li><a href="../Pages/login.php">Login</a></li>
+                                    <li><a href="../Pages/cadastro.php">Cadastro</a></li>
                                 </ul>
                                 </div>
                             </li>
