--- a/PI/Tela Inicial/Pages/SobreNos.html
+++ b/PI/Tela Inicial/Pages/SobreNos.html
@@ -207,12 +207,34 @@
     </header>
     <main>
         <section class="Banner_Sobre_Nos">
+            <div class="shape_sobre"></div>
             <div class="content_banner_sobre_nos">
                 <img src="../src/imagens/SobreMim/freepik-export-20241209130412wAw2.jpeg" alt="">
                 <div class="content_coteudo_banner_sobre">
                     <h4 class="text_top_sobre">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h4>
                     <h5 class="text_bottom_sobre">Lorem ipsum dolor, sit amet consectetur adipisicing elit. </h4>
                     <button class="btn_sobre"> <a href="">Conheça</a></button>
+                </div>
+            </div>
+        </section>
+        <section class="video_sobre">
+            <div class="content_video_sobre">
+                <video  controls class="video_content">
+                    <source src="https://www.youtube.com/watch?v=iTmWUN4KEeQ" type="video/mp4"> 
+                </video>
+                <div class="item_conteudo_sobre">
+                    <p class="text_sobre_video">Lorem ipsum dolor sit amet consectetur adipisicing elit. At quas fuga optio aspernatur laudantium minus, doloribus dolor dolore nihil nemo totam corrupti facilis beatae illo eum, excepturi atque nam rem?</p>
+                    <button class="btn_video_sobre">Confira</button>
+                </div>
+            </div>
+        </section>
+        <section class="cards_service">
+            <div class="content_cards_service">
+                <span class="title_cards">Serviços</span>
+                <div class="item_card_service">
+                    <img src="" alt="">
+                    <span class="title_card_service">Lorem ipsum dolor sit</span>
+                    <span class="text_card_service">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum, architecto voluptates dicta modi molestias optio.</span>
                 </div>
             </div>
         </section>
