--- a/PI/Tela Inicial/Pages/Home.html
+++ b/PI/Tela Inicial/Pages/Home.html
@@ -8,7 +8,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
         </style>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <script src="../JS/menu-mobile.js" defer></script>
+        <script src="../src/JS/menu-mobile.js" defer></script>
         <script src="../JS/banner.js" defer></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <script src="../JS/banner.js"></script>
@@ -269,7 +269,7 @@
         <!-- INICIO CARDS CATEGORIA -->
         <section class="cards_cartegoria">
                 <div class="content_cards_categoria">
-                    <div class="Title_card_produto Title_card_categoria">Mais Vendidos</div>
+                    <div class="Title_card_produto Title_card_categoria">Categorias</div>
                     <ul class="list_cards_categoria">
                         <li class="item_cards_categoria">
                             <a class="link_cards_categoria" href="#">
