--- a/PI/Pages/cadastro.html
+++ b/PI/Pages/cadastro.html
@@ -36,7 +36,7 @@ if (isset($_POST['nome'],$_POST['email'], $_POST['cep'], $_POST['cpf'],$_POST['s
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro</title>
-    <link rel="stylesheet" href="../src/Css/syte.css">
+    <link rel="stylesheet" href="../src/Css/style.css">
 </head>
 <body class="body-cad">
     <main class="main-cad">
