--- a/PI/Pages/login.html
+++ b/PI/Pages/login.html
@@ -40,7 +40,7 @@ if (isset($_POST['logar'])){
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../src/Css/syte.css">
+    <link rel="stylesheet" href="../src/Css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="../JS/validar_form_login.js" defer></script>
     <title>Login</title>
