--- a/PI/Pages/teste3.html
+++ b/PI/Pages/teste3.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Modal 3</title>
-  <link rel="stylesheet" href="../src/Css/syte.css">
+  <link rel="stylesheet" href="../src/Css/style.css">
   <script src="../src/Css/teste.js" defer></script>
 
 
