--- a/PI/Pages/teste_page.html
+++ b/PI/Pages/teste_page.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Produto Personalizado</title>
-    <link rel="stylesheet" href="../src/Css/syte.css">
+    <link rel="stylesheet" href="../src/Css/style.css">
 
     <script src="../src/JS/filtro-mobile.js" defer></script>
 
