--- a/PI/Pages/cadastrar_banner.html
+++ b/PI/Pages/cadastrar_banner.html
@@ -144,8 +144,8 @@
             </div>
         </div>
         <div class="container_btn_salvar_excluir_produto">
-            <button class="btn_excluir_produto">Limpar</button>
             <button class="btn_salvar_produto">Salvar</button>
+            <button class="btn_excluir_produto">Excluir</button>
         </div>
 
         
