--- a/PI/Pages/produto_personalizado.html
+++ b/PI/Pages/produto_personalizado.html
@@ -255,7 +255,7 @@
                          <div class="box-insert-image">
                             <div class="custom-file-upload">
                                 <input type="file" id="file-upload" class="insert-image" accept="image/*" multiple>
-                                <label for="file-upload">Adicionar imagem</label>
+                                <label for="file-upload">Adicionar imagem +</label>
                             </div>
                             <div class="container_img_anex">
                                 <div id="image-preview" class="image-preview"></div>
