--- a/PI/Pages/listar_pedidos_adm.html
+++ b/PI/Pages/listar_pedidos_adm.html
@@ -66,7 +66,7 @@
             </div>
             <div class="container_body_listar_produtos">
                 <div class="container_body_listar_produtos_header">
-                    <div class="container_btn_item_listar_produto">,
+                    <div class="container_btn_item_listar_produto">
                         <button class=" btn_item_listar_produto">A pagar</button>
                         <button class="btn_item_listar_produto">Produção</button>
                         <button class="btn_item_listar_produto">Envio</button>
