--- a/PI/Pages/listar_produto_adm.html
+++ b/PI/Pages/listar_produto_adm.html
@@ -67,7 +67,7 @@
             </div>
             <div class="container_body_listar_produtos">
                 <div class="container_body_listar_produtos_header">
-                    <div class="container_btn_item_listar_produto">,
+                    <div class="container_btn_item_listar_produto">
                         <button class=" btn_item_listar_produto">Todos</button>
                         <button class="btn_item_listar_produto">Ativo</button>
                         <button class="btn_item_listar_produto">Inativo</button>
